--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
-  }
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/leeminhduc2/myWebsite/issues"
+  },
+  "homepage": "https://github.com/leeminhduc2/myWebsite#readme"
 }
