--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "leeminhduc2's website sandbox",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,12 @@
   "bugs": {
     "url": "https://github.com/leeminhduc2/myWebsite/issues"
   },
-  "homepage": "https://github.com/leeminhduc2/myWebsite#readme"
+  "homepage": "https://github.com/leeminhduc2/myWebsite#readme",
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.0.0",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
+  }
 }
